@@ -60,33 +60,6 @@
    (list (assq 'mode situation)) ; play-mode
    ))
 
-
-;;; @ Internal method for multipart/signed
-
-(defun mime-display-multipart/signed (entity situation)
-  (let ((original-major-mode-cell (assq 'major-mode situation))
-	(default-situation
-	  (cdr (assq 'childrens-situation situation)))
-	child-situation)
-    (when original-major-mode-cell
-      (setq default-situation
-	    (cons original-major-mode-cell default-situation)))
-    (mapc
-     (lambda (child)
-       (setq child-situation
-	     (mime-find-entity-preview-situation child default-situation))
-       (mime-display-entity
-	child
-	(if (and (eq (cdr (assq 'type child-situation)) 'application)
-		 (memq (cdr (assq 'subtype child-situation))
-		       '(pgp-signature pkcs7-signature)))
-	    (put-alist 'body (if mime-pgp-verify-when-preview
-				 'visible
-			       'invisible)
-		       (copy-alist child-situation))
-	  child-situation)))
-     (mime-entity-children entity))))
-
 ;;; @ Internal method for multipart/encrypted
 
 (defun mime-display-multipart/pgp-encrypted (entity situation)
@@ -106,9 +79,7 @@
        (if (and (eq (cdr (assq 'type child-situation)) 'application)
 		(eq (cdr (assq 'subtype child-situation)) 'pgp-encrypted))
 	   (mime-display-entity
-	    child (put-alist 'body (if mime-pgp-decrypt-when-preview
-				       'visible
-				     'invisible)
+	    child (put-alist 'body mime-pgp-decrypt-when-preview
 			     (copy-alist child-situation)))
 	 (when mime-view-multipart/related-show-all-children
 	   (mime-display-entity
@@ -242,7 +213,7 @@
 	  (setq decrypted-entity
 		(mime-parse-message
 		 (mm-expand-class-name 'buffer)
-		 nil entity (mime-entity-node-id-internal entity))
+		 nil entity (mime-entity-node-id entity))
 		buffer-read-only t)))
       (if failed
 	  (progn
